src/objects/sma__MAClick2Create__c.object
<CustomObject>
    <fields>
        <fullName>sma__DefaultField__c</fullName>
        <label>Default Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__FieldSetOptions__c</fullName>
        <label>Field Set Options</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__MapClickCity__c</fullName>
        <label>Map Click City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickCountry__c</fullName>
        <label>Map Click Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickDefaultValue__c</fullName>
        <label>Map Click Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Map Click Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MapClickFieldSet__c</fullName>
        <inlineHelpText>Developer/API Name of Field Set</inlineHelpText>
        <label>Map Click Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickLatitude__c</fullName>
        <label>Map Click Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickLongitude__c</fullName>
        <label>Map Click Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickName__c</fullName>
        <label>Map Click Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickPostalCode__c</fullName>
        <label>Map Click Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickState__c</fullName>
        <label>Map Click State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MapClickStreet__c</fullName>
        <label>Map Click Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionCity__c</fullName>
        <label>My Position City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionCountry__c</fullName>
        <label>My Position Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionDefaultValue__c</fullName>
        <label>My Position Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Position Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionFieldSet__c</fullName>
        <inlineHelpText>Developer/API Name of Field Set</inlineHelpText>
        <label>My Position Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionLatitude__c</fullName>
        <label>My Position Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionLongitude__c</fullName>
        <label>My Position Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionName__c</fullName>
        <label>My Position Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionPostalCode__c</fullName>
        <label>My Position Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionState__c</fullName>
        <label>My Position State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionStreet__c</fullName>
        <label>My Position Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POICity__c</fullName>
        <label>POI City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POICountryShort__c</fullName>
        <label>POI Country Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POICountry__c</fullName>
        <label>POI Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIDefaultValue__c</fullName>
        <label>POI Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POI Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__POIFieldSet__c</fullName>
        <inlineHelpText>Developer/API Name of Field Set</inlineHelpText>
        <label>POI Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POILatitude__c</fullName>
        <label>POI Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POILongitude__c</fullName>
        <label>POI Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIName__c</fullName>
        <label>POI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIPhone__c</fullName>
        <label>POI Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIPostalCode__c</fullName>
        <label>POI Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIStateShort__c</fullName>
        <label>POI State Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIState__c</fullName>
        <label>POI State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIStreet__c</fullName>
        <label>POI Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__POIWebsite__c</fullName>
        <label>POI Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MapAnything Click-2-Create Setting</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <columns>sma__ObjectAPIName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sma__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>MA Click-2-Create Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Click-2-Create Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>